# barbeque_peopledetect

./: .gitignore  CMakeLists.txt  README  README.md
doc/: Makefile  report_bbque_opencv.tex
origsrc/: peopledetect.cpp
recipes/: peopledetect.recipe
src/: CMakeLists.txt  main.cpp  peopledetect.cpp  peopledetect.h
